<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Superbaby</string>
    <string name="title_timeline_fragment">Timeline</string>
    <string name="title_nursing_fragment">Nursing</string>
    <string name="title_food_fragment">Food</string>
    <string name="title_diaper_fragment">Diaper</string>
    <string name="title_sleep_fragment">Sleep</string>
    <string name="title_measure_fragment">Growth</string>
    <string name="title_pumping_fragment">Pumping</string>
    <string name="title_vaccine_fragment">Vaccine</string>
    <string name="title_section_baby">Baby</string>
    <string name="title_section_activity">Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_new_baby">New Baby</string>
    <string name="action_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="quick_button_title_sleep">Sleep</string>
    <string name="quick_button_title_nursing">Nursing</string>
    <string name="quick_button_title_diaper">Diaper</string>
    <string name="quick_button_title_measurement">Growth</string>
    <string name="nursing_percentage">{percentage}%</string>
    <string name="nursing_left_percentage_initial">Left ...%</string>
    <string name="nursing_right_percentage_initial">Right ...%</string>
    <string name="nursing_volume">{volume}mL</string>
    <string name="nursing_last_side_initial">Last Side: ...</string>
    <string name="nursing_last_side_title">Last side</string>
    <string name="nursing_today">{hour}h {minute}m {second}s</string>
    <string name="nursing_today_initial">...h ...m ...s</string>
    <string name="nursing_formula_today_initial">Formula ...mL</string>
    <string name="nursing_per_day_initial">Type ... ...</string>
    <string name="date_complete_format">{day}, {date} {month} {year}</string>
    <string name="day_only_format">{day}</string>
    <string name="date_simple_format">{date} {month} {year}</string>
    <string name="age_format">{day} days old</string>
    <string name="time_format">{hour}:{minute}</string>
    <string name="duration_format">{hour}h {minute}m {second}s</string>
    <string name="duration_in_minute_format">{minute}m</string>
    <string name="time_span_format">{start} - {end}</string>
    <string name="last_activity_format">{time}</string>
    <string name="night_percentage">{percentage}%</string>
    <string name="night_percentage_initial">Night ...%</string>
    <string name="nap_percentage">{percentage}%</string>
    <string name="nap_percentage_initial">Nap ...%</string>
    <string name="night_duration">{hour}h {minute}m {second}s</string>
    <string name="night_duration_initial">Night ...h ...m ...s</string>
    <string name="nap_duration">{hour}h {minute}m {second}s</string>
    <string name="nap_duration_initial">Nap ...h ...m ...s</string>
    <string name="sleep_percentage">Sleep {percentage}%</string>
    <string name="sleep_percentage_initial">Sleep ...%</string>
    <string name="active_percentage">Active {percentage}%</string>
    <string name="active_percentage_initial">Active ...%</string>
    <string name="sleep_duration">{hour}h {minute}m {second}s</string>
    <string name="sleep_duration_initial">Sleep ...h ...m ...s</string>
    <string name="active_duration">Active {hour}h {minute}m {second}s</string>
    <string name="active_duration_initial">Active ...h ...m ...s</string>
    <string name="wet_icon">Wet</string>
    <string name="dry_icon">Dry</string>
    <string name="mix_icon">Mix</string>
    <string name="total_activity_number">{value} times</string>
    <string name="total_activity_number_initial">0 times</string>
    <string name="activity_last">{value}</string>
    <string name="activity_last_initial">No data</string>
    <string name="ok_message">ok</string>
    <string name="input_not_complete_message">Please input all required data.</string>
    <string name="username_already_exist_message">This user name is already exist. Please login.</string>
    <string name="wrong_username_and_password_message">Wrong Username and Password.</string>
    <string name="username_is_not_registered_message">This username is not registered. Please register.</string>
    <string name="no_activity">no activity yet</string>
    <string name="camera_intent_error">Device is not supporting image capture</string>
    <string name="gallery_intent_error">Gallery is not exist on device</string>
    <string name="crop_intent_error">Device is not supporting image crop</string>
    <string name="ok_button">OK</string>
    <string name="volume_hint">volume</string>
    <string name="height_hint">height</string>
    <string name="weight_hint">weight</string>
    <string name="volume_unit">ml</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="left_side">left</string>
    <string name="right_side">right</string>
    <string name="formula">formula</string>
    <string name="diaper_dialog_title">Diaper type</string>
    <string name="diaper_dialog_negative_button">Cancel</string>
    <string name="nursing_dialog_title">Nursing type</string>
    <string name="nursing_dialog_negative_button">Cancel</string>
    <string name="measurement_dialog_title">Baby growth data</string>
    <string name="measurement_dialog_negative_button">Cancel</string>
    <string name="measurement_dialog_positive_button">OK</string>
    <string name="menu_edit">Edit</string>
    <string name="new_content">New Content</string>
    <string name="menu_delete">Delete</string>
    <string name="timeline_title">All activities summary</string>
    <string name="sleep_title">Sleep activity summary</string>
    <string name="nursing_title">Nursing activity summary</string>
    <string name="diaper_title">Diaper activity summary</string>
    <string name="measure_title">Baby development summary</string>
    <string name="about_apps_title">Growing Tree</string>
    <string name="about_apps_version">Version 1.0.0</string>
    <string name="about_apps_progrema">© 2014 Progrema, Inc.</string>
    <string name="about_apps_copy_right">All rights reserved.</string>
    <string name="login_instruction">Welcome Parent</string>
    <string name="login_sub_instruction">Please sign in or create new user account</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_new_account">Create new user account</string>
    <string name="baby_input_baby_name">Baby name</string>
    <string name="baby_input_instruction">Please fill in your baby information</string>
    <string name="sleep_stopwatch">Baby sleep timer</string>
    <string name="nursing_stopwatch">Baby nursing timer</string>

    <string-array name="gender_array">
        <item>Boy</item>
        <item>Girl</item>
    </string-array>
    <string-array name="time_selection">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>All</item>
    </string-array>
    <string-array name="diaper_selection">
        <item>Dry</item>
        <item>Wet</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="nursing_selection">
        <item>Left</item>
        <item>Right</item>
        <item>Formula</item>
    </string-array>

    <string name="baby_image_selector_title">Add baby image</string>

    <string-array name="add_image_method">
        <item>Use camera</item>
        <item>From gallery</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
