<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.progrema.superbaby.ui.activity.HomeActivity">
    <item
        android:id="@+id/action_new_baby"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_new_baby" />
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_action_upload"
        android:orderInCategory="2"
        android:showAsAction="collapseActionView"
        android:title="@string/action_report" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="3"
        android:showAsAction="collapseActionView"
        android:title="@string/action_help" />
</menu>
