<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="16dp"
            android:text="@string/about_apps_title"
            android:textColor="@color/pink"
            android:textSize="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/about_apps_version"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_size_micro" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/pink"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="4dp"
            android:text="@string/about_apps_progrema"
            android:textColor="@color/default_font"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="2dp"
            android:text="@string/about_apps_copy_right"
            android:textColor="@color/default_font"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

</LinearLayout>