<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/timeline_quick_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:background="@color/transparent_actionbar_color"
              android:gravity="center"
              android:orientation="horizontal">

    <Button
        android:id="@+id/quick_button_sleep"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/quick_button_title_sleep"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/quick_button_nursing"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/quick_button_title_nursing"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/quick_button_diaper"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/quick_button_title_diaper"
        android:textColor="@color/white"
        android:textStyle="bold"/>


</LinearLayout>