<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_choice_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Left" />

    <Button
        android:id="@+id/dialog_choice_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Right" />

    <Button
        android:id="@+id/dialog_choice_formula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Formula" />

    <LinearLayout
        android:id="@+id/container_formula_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/entry_text_volume"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/volume_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/volume_unit" />

        <Button
            android:id="@+id/button_formula_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ok_button" />

    </LinearLayout>

</LinearLayout>