<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sleep_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layer_header_card_background"
            android:orientation="horizontal"
            android:padding="4dp">

            <RelativeLayout
                android:id="@+id/sleep_header_left_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/night_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_percentage"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/nap_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/night_percentage"
                    android:text="@string/nap_percentage"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/today_night_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nap_percentage"
                    android:text="@string/night_total"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/today_nap_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/today_night_duration"
                    android:text="@string/nap_total"
                    android:textSize="@dimen/text_size_micro" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sleep_header_right_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/sleep_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_percentage"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/active_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sleep_percentage"
                    android:text="@string/active_percentage"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/today_sleep_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/active_percentage"
                    android:text="@string/sleep_duration"
                    android:textSize="@dimen/text_size_micro" />

                <TextView
                    android:id="@+id/today_active_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/today_sleep_duration"
                    android:text="@string/active_duration"
                    android:textSize="@dimen/text_size_micro" />

            </RelativeLayout>

        </LinearLayout>

        <com.progrema.superbaby.widget.customview.ObserveAbleListView
            android:id="@+id/activity_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <include layout="@layout/quick_button" />

</FrameLayout>
